[gd_scene load_steps=5 format=3 uid="uid://66o8fboqd2va"]

[ext_resource type="Theme" uid="uid://tgxaae13tjns" path="res://Main/Assets/Themes/primitive_theme.tres" id="1_oexjy"]
[ext_resource type="Script" path="res://Main/Menu/Scripts/create_lobby.gd" id="2_4yyq1"]
[ext_resource type="PackedScene" uid="uid://ddu4dpvang7a3" path="res://Main/Menu/Scenes/shader_background.tscn" id="2_q2x18"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5yrv"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0.878431, 0.478431, 0.372549, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.956863, 0.945098, 0.870588, 1)

[node name="CreateLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oexjy")
script = ExtResource("2_4yyq1")
metadata/_edit_lock_ = true

[node name="ShaderBackground" parent="." instance=ExtResource("2_q2x18")]
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -541.5
offset_top = -205.5
offset_right = 541.5
offset_bottom = 205.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t5yrv")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 33
alignment = 1

[node name="Current" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Макс. игроков: 3"

[node name="PlayerNumSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
min_value = 3.0
max_value = 10.0
value = 3.0
scrollable = false

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/PlayerNumSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.5
offset_right = 40.0
offset_bottom = 27.5
grow_vertical = 2
theme_override_constants/margin_bottom = 150

[node name="Min" type="Label" parent="PanelContainer/VBoxContainer/PlayerNumSlider/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "3"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/PlayerNumSlider"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -108.5
offset_bottom = 108.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_bottom = 150

[node name="Max" type="Label" parent="PanelContainer/VBoxContainer/PlayerNumSlider/MarginContainer2"]
layout_mode = 2
text = "10
"

[node name="TimeSettingsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/TimeSettingsContainer"]
layout_mode = 2
text = "Рисование (cек.):"

[node name="TimeSec" type="LineEdit" parent="PanelContainer/VBoxContainer/TimeSettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/minimum_character_width = 3
theme_override_font_sizes/font_size = 48
text = "60"
placeholder_text = "сек"
alignment = 1
max_length = 3

[node name="Create" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(470, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Создать"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/PlayerNumSlider" to="." method="_on_player_num_slider_value_changed"]
[connection signal="focus_exited" from="PanelContainer/VBoxContainer/TimeSettingsContainer/TimeSec" to="." method="_on_time_sec_focus_exited"]
[connection signal="text_submitted" from="PanelContainer/VBoxContainer/TimeSettingsContainer/TimeSec" to="." method="_on_time_sec_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Create" to="." method="_on_create_pressed"]
